alignment issues

--- a/elizawebsite/src/App.css
+++ b/elizawebsite/src/App.css
@@ -45,6 +45,7 @@
 .teamelizatext{
   font-style: italic;
   text-align: center; 
+  width: 100%;
 }
 
 .newsbox{
@@ -63,7 +64,7 @@
 
 .footer{
   border-top: #4a5568 solid 1.5px;
-  padding: 1rem 0 1rem 2rem;
+  padding: 1rem 0 1rem 1.5rem;
   margin: 3rem 0 0 0;
 	display: flex;
   position: fixed; 
@@ -109,6 +110,9 @@
   }
   .footer{
     bottom:auto;
+  }
+  .teamelizatext{
+    text-align: center;
   }
 
 }
